--- a/apps/templates/home/globalMarketStatus.html
+++ b/apps/templates/home/globalMarketStatus.html
@@ -79,13 +79,13 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1 class="m-0 text-dark">Dashboard</h1>
+          <h1 class="m-0 text-dark">Global Market Status</h1>
         </div>
         <!-- /.col -->
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active">Dashboard</li>
+            <li class="breadcrumb-item active">Global Market Status</li>
           </ol>
         </div>
         <!-- /.col -->
@@ -99,76 +99,7 @@
   <!-- Main content -->
   <div class="content">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-3 col-6">
-          <!-- small box -->
-          <div class="small-box bg-info">
-            <div class="inner">
-              <h3>150</h3>
-
-              <p>New Orders</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-bag"></i>
-            </div>
-            <a href="#" class="small-box-footer"
-              >More info <i class="fas fa-arrow-circle-right"></i
-            ></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-6">
-          <!-- small box -->
-          <div class="small-box bg-success">
-            <div class="inner">
-              <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-              <p>Bounce Rate</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-stats-bars"></i>
-            </div>
-            <a href="#" class="small-box-footer"
-              >More info <i class="fas fa-arrow-circle-right"></i
-            ></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-6">
-          <!-- small box -->
-          <div class="small-box bg-warning">
-            <div class="inner">
-              <h3>44</h3>
-
-              <p>User Registrations</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-person-add"></i>
-            </div>
-            <a href="#" class="small-box-footer"
-              >More info <i class="fas fa-arrow-circle-right"></i
-            ></a>
-          </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-6">
-          <!-- small box -->
-          <div class="small-box bg-danger">
-            <div class="inner">
-              <h3>65</h3>
-
-              <p>Unique Visitors</p>
-            </div>
-            <div class="icon">
-              <i class="ion ion-pie-graph"></i>
-            </div>
-            <a href="#" class="small-box-footer"
-              >More info <i class="fas fa-arrow-circle-right"></i
-            ></a>
-          </div>
-        </div>
-        <!-- ./col -->
-      </div>
+      
       <div class="row">
         <div class="col-lg-9">
           <!-- /.card -->
@@ -187,21 +118,19 @@
             </div>
             <div id="stock-data"></div>
             <div class="card-body table-responsive p-0 table-wrapper">
-              <table class="table table-striped table-valign-middle">
-                <thead>
-                  <tr>
-                    <th>Symbol</th>
-                    <th>Current Price</th>
-                    <th>Target High Price</th>
-                    <th>Target Low Price</th>
-                    <th>Target Mean Price</th>
-                    <th>Target Median Price</th>
-                    <th>Recommendation</th>
-                    <th>Add</th>
-                  </tr>
-                </thead>
-                <tbody id="Dashboard_tbody"></tbody>
-              </table>
+                <table class="table table-striped table-valign-middle">
+                    <thead>
+                      <tr>
+                        <th>Market Type</th>
+                        <th>Region</th>
+                        <th>Primary Exchanges</th>
+                        <th>Local Open</th>
+                        <th>Local Close</th>
+                        <th>Current Status</th>
+                      </tr>
+                    </thead>
+                    <tbody id="Global_tbody"></tbody>
+                  </table>
             </div>
           </div>
           <!-- /.card -->
