--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -54,6 +54,13 @@
               </p>
             </a>
           </li>
+          <a href="/globalMarketStatus.html" class="nav-link">
+            <i class="nav-icon fas fa-globe"></i>
+            <p>
+              Global Market
+            </p>
+          </a>
+        </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon far fa-plus-square"></i>
