--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -78,7 +78,14 @@
               
             </ul>
           </li>
-          
+          <li class="nav-item">
+            <a href="/feedbackSystem.html" class="nav-link">
+              <i class='fas fa-phone-alt nav-icon'></i>
+              <p>
+                Feedback System
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
