--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -86,6 +86,14 @@
               </p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="/PrefrenceSettings.html" class="nav-link">
+              <i class='fas fa-phone-alt nav-icon'></i>
+              <p>
+                Prefrence Settings
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
