add date and time

--- a/apps/templates/home/PrefrenceSettings.html
+++ b/apps/templates/home/PrefrenceSettings.html
@@ -23,7 +23,8 @@
 
   <div class="content-wrapper" style="display: flex; align-items: center;justify-content: center; font-size: xx-large;">
    
-    
+    <div class="card">
+      <div class="card-body">
     <form action="/set-time" method="POST">
       <label for="time-input">Set time:</label>
       <input type="time" id="time-input" name="time" value="{{time}}">
@@ -45,6 +46,7 @@
     
       <input type="submit" value="Set">
   </form>
+</div></div>
   </div>
   
 
