--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -38,9 +38,9 @@
   <ul class="navbar-nav ml-auto">
     <!-- Messages Dropdown Menu -->
     <li class="nav-item dropdown">
-        <input type="time" id="time-input" name="time" value="{{time}}" readonly>
-        <input type="date" id="date-input" name="date" value="{{date}}" readonly>
-        <input type="day" id="day-input" name="day" value="{{day}}" readonly>
+        <input type="text" id="time-input" name="time" readonly>
+        <input type="text" id="date-input" name="date" value="{{date}}" readonly>
+        <input type="text" id="day-input" name="day" value="{{day}}" readonly>
     </li>
 
     <!-- Notifications Dropdown Menu -->
