edits in sidebar icons

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -1,59 +1,61 @@
-  <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="/" class="brand-link">
-      <img src="/static/assets/img/t-mobile.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Tradeyoo</span>
-    </a>
+<!-- Main Sidebar Container -->
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+  <!-- Brand Logo -->
+  <a href="/" class="brand-link">
+    <img src="/static/assets/img/t-mobile.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+      style="opacity: .8">
+    <span class="brand-text font-weight-light">Tradeyoo</span>
+  </a>
 
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user panel (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-          <img src="/static/assets/img/account_2.png" class="img-circle elevation-2" alt="User Image">
-        </div>
-        <div class="info">
-          <a href="{{ url_for('logout') }}" class="d-block">
-            {{ current_user.username }} - Logout
-          </a>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <!-- Sidebar user panel (optional) -->
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="image">
+        <img src="/static/assets/img/account_2.png" class="img-circle elevation-2" alt="User Image">
+      </div>
+      <div class="info">
+        <a href="{{ url_for('logout') }}" class="d-block">
+          {{ current_user.username }} - Logout
+        </a>
+      </div>
+    </div>
+
+    <!-- SidebarSearch Form -->
+    <div class="form-inline">
+      <div class="input-group" data-widget="sidebar-search">
+        <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+        <div class="input-group-append">
+          <button class="btn btn-sidebar">
+            <i class="fas fa-search fa-fw"></i>
+          </button>
         </div>
       </div>
+    </div>
 
-      <!-- SidebarSearch Form -->
-      <div class="form-inline">
-        <div class="input-group" data-widget="sidebar-search">
-          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-sidebar">
-              <i class="fas fa-search fa-fw"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-          <!-- Add icons to the links using the .nav-icon class
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+        <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          
-          <li class="nav-item">
-            <a href="/main-dashboard.html" class="nav-link">
-              <i class="nav-icon fas fa-tachometer-alt"></i>
-              <p>
-                Dashboard
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/watchlist.html" class="nav-link">
-              <i class="nav-icon far fa-image"></i>
-              <p>
-                Watchlist
-              </p>
-            </a>
-          </li>
+
+        <li class="nav-item">
+          <a href="/main-dashboard.html" class="nav-link">
+            <i class="nav-icon fas fa-tachometer-alt"></i>
+            <p>
+              Dashboard
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/watchlist.html" class="nav-link">
+            <i class="nav-icon far fa-image"></i>
+            <p>
+              Watchlist
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/globalMarketStatus.html" class="nav-link">
             <i class="nav-icon fas fa-globe"></i>
             <p>
@@ -61,50 +63,49 @@
             </p>
           </a>
         </li>
-          <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
-              <i class="nav-icon far fa-plus-square"></i>
-              <p>
-                Profile Settings
-                <i class="fas fa-angle-left right"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="{{url_for('editingprofile')}}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Editing Profile</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="{{url_for('recoverpassword')}}" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Recover Password</p>
-                </a>
-              </li>
-              
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a href="/feedbackSystem.html" class="nav-link">
-              <i class='fas fa-phone-alt nav-icon'></i>
-              <p>
-                Feedback System
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/PrefrenceSettings.html" class="nav-link">
-              <i class='fas fa-phone-alt nav-icon'></i>
-              <p>
-                Prefrence Settings
-              </p>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
-  
+        <li class="nav-item has-treeview">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-user-circle"></i>
+            <p>
+              Profile Settings
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a href="{{url_for('editingprofile')}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Editing Profile</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="{{url_for('recoverpassword')}}" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Recover Password</p>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a href="/feedbackSystem.html" class="nav-link">
+            <i class='fas fa-comment nav-icon'></i>
+            <p>
+              Feedback System
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="/PrefrenceSettings.html" class="nav-link">
+            <i class='fas fa-cog nav-icon'></i>
+            <p>
+              Preference Settings
+            </p>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+  <!-- /.sidebar -->
+</aside>
