search bar in dashboard table

--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -179,6 +179,11 @@
             <div class="card-header border-0">
               <h3 class="card-title">Stocks</h3>
               <div class="card-tools">
+                <form id="search-form">
+                  <input type="text" id="search-input" placeholder="Search...">
+                  <button type="submit">Search</button>
+                </form>
+                
                 <a href="#" class="btn btn-tool btn-sm">
                   <i class="fas fa-download"></i>
                 </a>
